2024-10-18T01:17:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11395679861 # 594
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-18
* notice: last 14d: unq all: 12 16
* notice: prev accum: outdated-unq outdated-all / unq all: 2254 4504 / 2269 4519
* notice: next accum: outdated-unq outdated-all / unq all: 2254 4504 / 2270 4520
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2024-10-17]

2024-10-17T12:33:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11385011467 # 593
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
* notice: last 14d: unq all: 12 15
* notice: prev accum: outdated-unq outdated-all / unq all: 2254 4504 / 2267 4517
* notice: next accum: outdated-unq outdated-all / unq all: 2254 4504 / 2269 4519
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-10-17]

2024-10-16T12:33:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11365723392 # 591
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-16
* notice: last 14d: unq all: 11 13
* notice: prev accum: outdated-unq outdated-all / unq all: 2251 4501 / 2267 4517
* notice: next accum: outdated-unq outdated-all / unq all: 2254 4504 / 2267 4517
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-10-02] / []

2024-10-15T12:34:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11346130653 # 589