@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-18T01:17:43Z",
-  "count_outdated" : 4504,
-  "uniques_outdated" : 2254,
+  "timestamp" : "2024-10-20T01:23:46Z",
+  "count_outdated" : 4505,
+  "uniques_outdated" : 2255,
   "count" : 4520,
   "uniques" : 2270,
   "clones" : [
-    {
-      "timestamp": "2024-10-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-07T00:00:00Z",
       "count": 2,
