@@ -1,12 +1,7 @@
 {
-  "count": 16,
+  "count": 15,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2024-10-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-10-07T00:00:00Z",
       "count": 2,
