@@ -1,3 +1,12 @@
+2024-10-20T01:23:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11422277881 # 598
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-20
+* notice: last 14d: unq all: 12 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 2254 4504 / 2270 4520
+* notice: next accum: outdated-unq outdated-all / unq all: 2255 4505 / 2270 4520
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-06] / []
+
 2024-10-18T01:17:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11395679861 # 594
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-18
